* fix the pause/continue display [#35] * fix breakpoint visibility for long lists [#34]

--- a/view/css/emulator.css
+++ b/view/css/emulator.css
@@ -587,6 +587,7 @@ h3 {
     &.visible {
         padding-block: 0.5em;
         max-height: 300px;
+        overflow-y: auto;
         transition:
             max-height .125s ease-in,
             padding-block 0.125ms ease-in;
